<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.convert.ConvertFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="?attr/actionBarSize"
            android:paddingBottom="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_unit_conversion"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <!--ml-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_millilitres_ml"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:paddingEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
                <EditText
                    android:id="@+id/millilitresInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/text_ml"/>
            </LinearLayout>

            <!--mg-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_milligrams_mg"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:paddingEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
                <EditText
                    android:id="@+id/milligramsInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/text_mg"/>
            </LinearLayout>

            <!--ul-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_microlitres_ul"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:paddingEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
                <EditText
                    android:id="@+id/microlitresInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/text_ul"/>
            </LinearLayout>

            <!--mcg-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_micrograms_mcg"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:paddingEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
                <EditText
                    android:id="@+id/microgramsInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/text_mcg"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>